--- a/app.json
+++ b/app.json
@@ -1,33 +1,39 @@
 {
-  "pages": [
-    "pages/index/index",
-    "pages/web/web",
-    "pages/my/my"
-  ],
-  "window": {
-    "navigationBarBackgroundColor": "#ffffff",
-    "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "拉瓦云",
-    "backgroundTextStyle": "light"
-  },
-  "tabBar": {
-    "color": "#AAAAAA",
-    "selectedColor": "#262626",
-    "borderStyle": "black",
-    "backgroundColor": "#fff",
-    "list": [
-      {
-        "text": "首页",
-        "pagePath": "pages/index/index",
-        "iconPath": "images/home.png",
-        "selectedIconPath": "images/home_on.png"
-      },
-      {
-        "text": "我的",
-        "pagePath": "pages/my/my",
-        "iconPath": "images/user.png",
-        "selectedIconPath": "images/user_on.png"
-      }
-    ]
-  }
+    "pages": [
+        "pages/index/index",
+        "pages/web/web",
+        "pages/my/my",
+        "pages/sitemap/sitemap"
+    ],
+    "window": {
+        "navigationBarBackgroundColor": "#ffffff",
+        "navigationBarTextStyle": "black",
+        "navigationBarTitleText": "拉瓦云",
+        "backgroundTextStyle": "light"
+    },
+    "tabBar": {
+        "color": "#AAAAAA",
+        "selectedColor": "#262626",
+        "borderStyle": "black",
+        "backgroundColor": "#fff",
+        "list": [
+            {
+                "text": "首页",
+                "pagePath": "pages/index/index",
+                "iconPath": "images/home.png",
+                "selectedIconPath": "images/home_on.png"
+            },
+            {
+                "text": "我的",
+                "pagePath": "pages/sitemap/sitemap",
+                "iconPath": "images/user.png",
+                "selectedIconPath": "images/user_on.png"
+            }
+        ]
+    },
+    "dynamicLib": {
+        "swan-sitemap-lib": {
+            "provider": "swan-sitemap"
+        }
+    }
 }
